[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pycheet"
version = "0.0.7"
authors = [
  { name="Rocco S", email="botmech@outlook.com" },
]
description = "A small python cheet package"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[tool.hatch.build.targets.wheel]
packages = ["src/pycheet"]

[project.urls]
Homepage = "https://github.com/webro-13/pycheet"
Issues = "https://github.com/webro-13/pycheet/issues"